--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
-    <h1>Hello :)</h1>
+    <img class="bg-pattern bg-pattern__top" src="src/images/bg-pattern-top.svg" alt=" ">
+    <img class="bg-pattern bg-pattern__bottom" src="src/images/bg-pattern-bottom.svg" alt=" ">
+    <div class="card">
+        <div class="c-header"></div>
+        <div class="c-avatar">
+            <img class="c-avatar--img" src="src/images/image-victor.jpg" alt="Victor">
+        </div>
+        <div class="c-body">
+            <div class="c-person">
+                <div>
+                    <span class="c-person--name">Victor Crest</span><span class="c-person--age">26</span>
+                </div>
+                <div class="c-person--location">
+                    <span>London</span>
+                </div>
+            </div>
+            <div class="c-stats">
+                <div class="c-stat">
+                    <span class="c-stat--count">80K</span>
+                    <span class="c-stat--name">Followers</span>
+                </div>
+                <div class="c-stat">
+                    <span class="c-stat--count">80K</span>
+                    <span class="c-stat--name">Followers</span>
+                </div>
+                <div class="c-stat">
+                    <span class="c-stat--count">80K</span>
+                    <span class="c-stat--name">Followers</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
