--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                     <span class="c-stat--name">Followers</span>
                 </div>
                 <div class="c-stat">
-                    <span class="c-stat--count">80K</span>
-                    <span class="c-stat--name">Followers</span>
+                    <span class="c-stat--count">803K</span>
+                    <span class="c-stat--name">Likes</span>
                 </div>
                 <div class="c-stat">
-                    <span class="c-stat--count">80K</span>
-                    <span class="c-stat--name">Followers</span>
+                    <span class="c-stat--count">1.4K</span>
+                    <span class="c-stat--name">Photos</span>
                 </div>
             </div>
         </div>
